// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`can create a new boilerplate TypeScript cli 1`] = `
"foo-ts version 0.0.1

  foo-ts         -                         
  version (v)    Output the version number 
  generate (g)   -                         
  help (h)       -                         
"
`;

exports[`can create a new boilerplate TypeScript cli 2`] = `""`;

exports[`can create a new boilerplate cli 1`] = `
"foo version 0.0.1

  foo            -                         
  version (v)    Output the version number 
  generate (g)   -                         
  help (h)       -                         
"
`;

exports[`can create a new boilerplate cli 2`] = `""`;
